<resources>
    <string name="application_name">Pet Amigo</string>
    <string name="action_settings">Configurações</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_meus_anuncios">Meus Anúncios</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login ou Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_meus_anuncios">Meus Anúncios</string>
    <string name="title_activity_cadastrar_anuncio">Cadastrar anúncio</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="logar">Logar</string>
    <string name="anuncios">Anúncios</string>
    <string name="cadastrar_anuncio">Cadastrar Anúncio</string>
    <string name="descricao_do_animal">Descrição do animal</string>
    <string name="nome_do_animal">Nome do animal</string>
    <string name="raca">Raça</string>
    <string name="txt_compartilhar">Compartilhar</string>
    <string name="txt_modelo_comentarios">Fulano de tal</string>
    <string name="txt_modelo_comentarios2">Nossa qque cadela linda, merece ganhar logo uma casa!</string>
    <string name="barra">|</string>
    <string name="cidade">Cidade</string>
    <string name="especie">Espécie</string>
    <string name="txt_cad_helper_descrição_animal">Escreva um pouco sobre a história do Pet, quais as caracteristicas, suas rotinas, se é carinhoso, se é adestrado, castrado. Conte os motivos quais levaram à Adoção ou em que condições foi encontrado!</string>
    <string name="configuracoes">Configurações</string>
    <string name="todo">TODO</string>
    <string name="txt_num_curtidas">num_curtidas</string>
    <string name="botao_curtir">btn_curtir</string>
    <string name="ver_telefone">ver_telefone</string>
    <string name="background_black">background_black</string>
    <string name="txt_nun_cuti">quantidade de curtidas</string>
    <string name="txt_curtidas">Curtidas</string>
    <string name="txt_comentar">Comentar…</string>
    <string name="zero">0</string>
    <string name="doacao">Doação</string>
    <string name="nome_app">Pet Amigo</string>
    <string name="txt_nome">Nome do Perfil Humano</string>
    <string name="txt_email_exemplo">nome@email.com.br</string>
    <string name="app_id">ca-app-pub-6718857112988900~9519509403</string>
    <string name="banner_id">ca-app-pub-6718857112988900/9409443166</string>
    <string name="detalhes">Detalhes</string>
    <string-array name="idade">
        <item>0–3 meses</item>
        <item>4–6 meses</item>
        <item>1 ano</item>
        <item>2 anos</item>
        <item>3 anos ou mais</item>
    </string-array>
    <string-array name="portes">
        <item>pequeno</item>
        <item>médio</item>
        <item>grande</item>
    </string-array>
    <string-array name="especies">
        <item>Cão</item>
        <item>Gato</item>
        <item>Cavalo</item>
        <item>Coelho</item>
        <item>Ave</item>
        <item>Réptil</item>
        <item>Peixe</item>
        <item>Outro</item>
    </string-array>
    <string-array name="sexos">
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>
    <string-array name="cidades">
        <item>Mamanguape</item>
        <item>Olinda</item>
        <item>Recife</item>
    </string-array>
    <string name="title_activity_perfil_humano">PerfilHumanoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="txt_minha_conta">Minha Conta</string>
    <string name="txt_config_notificar">Configurar Notificações</string>
    <string name="cad_novo_animal">Pet</string>
    <string name="txt_ajudar">Saiba como Contribuir</string>
    <string name="txt_conversas">Minhas Mensagens</string>
    <string name="txt_Sobre_App">Sobre o App</string>
    <string name="comunication">Comunicações</string>
    <string name="txt_perdido">Perdido</string>
    <string name="txt_compartilhar_app">Compartilhar App</string>
    <string name="enc_conta">Encerrar Conta</string>
    <string name="txt_idade">35</string>
    <string name="txt_anos">Anos</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_pais">País</string>
    <string name="txt_um_pouco_sobre">Sobre mim..</string>
    <string name="txt_genero">Sexo</string>
    <string name="curtida">Curtida</string>
    <string name="curtidas">Curtidas</string>
    <string name="desativarConta">Desativar Conta</string>
    <string name="facebook_app_id">314424992539028</string>
    <string name="fb_login_protocol_scheme">fb314424992539028</string>
    <string name="google_web_client">401004222439-k032p84b3o9tp5rngjjqqeiodtflfa50.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ir_anuncios">Ir para os anúncios</string>
    <string name="senha">Senha</string>
    <string name="sucesso_login_facebook">Sucesso ao realizar login pelo facebook</string>
    <string name="falha_login_facebook">Falha ao realizar login pelo Facebook.</string>
    <string name="sucesso_login_google">Sucesso ao realizar login pelo google,</string>
    <string name="cadastro_realizado">Cadastro realizado. Acesse sua caixa de e-mails e valide sua conta.</string>
    <string name="digite_senha_forte">Digite uma senha mais forte</string>
    <string name="digite_email_valido">Digite um e-mail válido</string>
    <string name="conta_cadastrada">Conta já cadastrada. Realize seu login</string>
    <string name="usuario_inexistente">Usuário inexistente</string>
    <string name="falha_cadastro_usuario">Falha ao cadastrar usuário</string>
    <string name="erro">Erro:</string>
    <string name="sucesso_login">Sucesso ao realizar login.</string>
    <string name="email_nao_verificado">E-mail não verificado. Gentileza verificar sua caixa de e-mail.</string>
    <string name="falha_login">Falha ao realizar login:</string>
    <string name="selecione_especie">Selecione a espécie desejada</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecione_cidade">Selecione a cidade desejada</string>
    <string name="todos">Todos</string>
    <string name="todas">Todas</string>
    <string name="salvando_anuncio">Salvando anúncio</string>
    <string name="sucesso_ao_fazer_upload">Sucesso ao fazer upload</string>
    <string name="falha_upload">Falha ao fazer upload</string>
    <string name="preencha_descricao">Preencha o campo descrição!</string>
    <string name="preencha_cidade">Preencha o campo cidade!</string>
    <string name="preencha_estado">Preencha o campo estado!</string>
    <string name="preencha_raca">Preencha o campo raça!</string>
    <string name="preencha_porte">Preencha o campo porte!</string>
    <string name="preencha_idade">Preencha o campo idade!</string>
    <string name="preencha_sexo">Preencha o campo sexo!</string>
    <string name="preencha_especie">Preencha o campo especie!</string>
    <string name="preencha_nome">Preencha o campo nome!</string>
    <string name="selecione_foto">Selecione pelo menos uma foto!</string>
    <string name="escolha">Escolha</string>
    <string name="cameraa">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="permissoes_negadas">Permissões negadas</string>
    <string name="necessario_aceitar_permissoes">Para utilizar o app é necessário aceitar as permissões</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefone_nao_cadastrado">Telefone não cadastrado.</string>
    <string name="anuncio_excluido">Anúncio excluído!</string>
    <string name="fotos_excluidas">Fotos excluídas com sucesso</string>
    <string name="falha_deletar_fotos">Falha ao deletar fotos</string>
    <string name="falha_carregar_anuncios">Falha ao carregar anúncios.</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="email_enviado">Um e-mail foi enviado para você.</string>
    <string name="email_senha_invalido">E-mail ou senha inválido!</string>
    <string name="falha_enviar_email_recuperacao">Falha ao enviar e-mail de recuperação de senha.</string>
    <string name="txt_modificar">Modificar</string>
    <string name="adotar_pet">Adotar Pet</string>
    <string name="cadastrar_pet">Cadastrar Pet</string>
    <string name="txt_nomee">Nome:</string>
    <string name="txt_celio">Célio Alves da Silveira</string>
    <string name="txt_cidade">Cidade:</string>
</resources>