<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_usuario"
            android:title="@string/txt_minha_conta" />
        <item
            android:id="@+id/nav_config_notificacoes"
            android:icon="@drawable/ic_notifications"
            android:title="@string/txt_config_notificar" />
        <item
            android:id="@+id/nav_meus_anuncios"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/txt_meus_anuncios" />
        <item
            android:id="@+id/cad_pet"
            android:title="@string/cad_novo_animal">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/pet_adote"
                    android:icon="@drawable/ic_perfilpet"
                    android:title="Para Adoção" />
                <item
                    android:id="@+id/pet_procurado"
                    android:icon="@drawable/ic_procurar_pet"
                    android:title="@string/txt_perdido" />

                <item
                    android:id="@+id/doacao"
                    android:icon="@drawable/ic_ajudar_causa"
                    android:title="@string/txt_ajudar" />
                <item
                    android:id="@+id/nav_sair"
                    android:title="@string/txt_sair" />


            </group>

        </item>



    </group>

    <group android:checkableBehavior="single">

    <item android:title="@string/comunication" >
        <menu android:checkableBehavior="single">
            <item
                android:checkableBehavior="single"
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/txt_compartilhar_app" />
            <item
                android:checkableBehavior="single"
                android:id="@+id/nav_conversar"
                android:icon="@drawable/ic_conversa"
                android:title="@string/txt_conversas" />
            <item
                android:checkableBehavior="single"
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/txt_Sobre_App" />

        </menu>


    </item>
    </group>

</menu>
